--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Telegram bot for downloading songs in mp3 and mp4 formats from YouTube",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,12 @@
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.1.1"
   }
 }
